--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "firebase": "^9.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.7"
   },
   "homepage": "https://sergij14.github.io/rent-moto/",
   "devDependencies": {
