--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.2",
     "zustand": "^4.3.7"
   },
   "homepage": "https://sergij14.github.io/rent-moto/",
