--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-toastify": "^9.1.2",
     "zustand": "^4.3.7"
   },
-  "homepage": "https://sergij14.github.io/rent-moto/",
+  "homepage": "./",
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
