--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
     "firebase": "^9.20.0",
     "react": "^18.2.0",
