--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
-  "homepage": "https://sergij14.github.io/rent-moto",
+  "homepage": "https://blackmoto.ge/",
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
