--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build && cp CNAME ./dist",
+    "predeploy": "npm run build && cp ./404.html ./dist && cp CNAME ./dist",
     "deploy": "gh-pages -d dist",
     "prepare": "husky install"
   },
