--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "react-use-measure": "^2.1.1",
     "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
